--- a/assets/css/creative-design.css
+++ b/assets/css/creative-design.css
@@ -11184,7 +11184,7 @@ nav.page-navbar.affix .navbar-brand .text-dark {
   text-align: center;
   color: white;
   position: relative;
-  height: 598px;
+  height: 100%;
   position: relative;
 }
 
@@ -11194,7 +11194,7 @@ nav.page-navbar.affix .navbar-brand .text-dark {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .header .header-content {
@@ -11212,12 +11212,16 @@ nav.page-navbar.affix .navbar-brand .text-dark {
   color: white;
   opacity: 1;
   margin-bottom: 5px;
-  font-size: calc(12px + (16 - 14) * ((100vw - 300px) / (1200 - 300)));
+  /* font-size: calc(12px + (16 - 14) * ((100vw - 300px) / (1200 - 300))); */
+  font-size: calc(24px + (32 - 28) * ((100vw - 300px) / (1200 - 300)));
+  font-weight: bold;
 }
 
 .header .header-content h6 {
   margin-bottom: 25px;
-  font-size: calc(35px + (60 - 35) * ((100vw - 300px) / (1200 - 300)));
+  font-size: calc(38px + (64 - 38) * ((100vw - 300px) / (1200 - 300)));
+  font-weight: bold;
+  background-color: var(--primary);
 }
 
 .header-title {
